samples/_failures_safe/1761040185_563ac6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d16b818.c: In function ‘main’:
./samples/SAFE/__tmp_8d16b818.c:147:24: error: missing terminating " character
  147 |                 printf("Failed to parse line
      |                        ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8d16b818.c:147:17: error: expected expression at end of input
  147 |                 printf("Failed to parse line
      |                 ^~~~~~
./samples/SAFE/__tmp_8d16b818.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8d16b818.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8d16b818.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8d16b818.c:147:17: error: expected declaration or statement at end of input
